--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -2,12 +2,11 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxYzdCeMDZKONuUPFC8jdY",
+      "authorship_tag": "ABX9TyOz0epey9W55hs7IzsCyixo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +83,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +104,7 @@
         "from os.path import isfile, join\r\n",
         "import string"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +118,7 @@
         "#creating a list of folder names to make valid pathnames later\r\n",
         "folders = [f for f in listdir(my_path)]"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +133,7 @@
       "source": [
         "folders"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +180,7 @@
       "source": [
         "print(len(folders))"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +221,7 @@
         "\r\n",
         "    return num\r\n"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +233,7 @@
         "#Removing incompatible files\r\n",
         "val = find_incompatible_files(my_path)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +250,7 @@
         "\r\n",
         "print(len(val))"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +274,7 @@
         "    folder_path = join(my_path, folder_name)\r\n",
         "    files.append([f for f in listdir(folder_path)])"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +289,7 @@
       "source": [
         "sum(len(files[i]) for i in range(20))"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +316,7 @@
         "    for fi in files[fo]:\r\n",
         "        pathname_list.append(join(my_path, join(folders[fo], fi)))"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -332,7 +331,7 @@
       "source": [
         "len(pathname_list)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +362,7 @@
         "    for i in range(num_of_files):\r\n",
         "        Y.append(folder_name)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -378,7 +377,7 @@
       "source": [
         "len(Y)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,14 +405,11 @@
         "import os.path\r\n",
         "import glob\r\n",
         "import nltk\r\n",
-        "from nltk.corpus import stopwords\r\n",
         "\r\n",
         "def cleanDoc(doc):\r\n",
         "    tokens = nltk.WordPunctTokenizer().tokenize(doc)\r\n",
-        "    # stop_words = set(stopwords.words('english'))\r\n",
-        "    # tokens = remove_stopwords(tokens)\r\n",
         "    clean = [token.lower() for token in tokens if len(token) > 3 and token.isalpha()]\r\n",
-        "    # clean = [word for word in clean if not word in stopwords]\r\n",
+        "    \r\n",
         "    return clean\r\n",
         "\r\n",
         "\r\n",
@@ -436,7 +432,7 @@
         "        list_of_all_words.append(word)\r\n",
         "\r\n"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +452,7 @@
         "words, counts = np.unique(np_list_of_all_words, return_counts=True)\r\n",
         "len(words)"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +486,7 @@
         "          d_fq.append(pathname_list[i])\r\n",
         "  return len(d_fq)"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -595,7 +591,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +602,7 @@
       "source": [
         "do_train, do_test, Y_train, Y_test = train_test_split(pathname_list, Y, random_state=0, test_size=0.25)"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +618,7 @@
         "            new_list.append(j)\r\n",
         "    return new_list"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +632,7 @@
         "for document in do_train:\r\n",
         "        list_of_words.append((ps(document)))"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,7 +647,7 @@
       "source": [
         "len(list_of_words)"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +672,7 @@
         "import numpy as np\r\n",
         "np_list_of_words = np.asarray(flatten(list_of_words))\r\n"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -694,7 +690,7 @@
         "words, counts = np.unique(np_list_of_words, return_counts=True)\r\n",
         "len(words)"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,9 +714,9 @@
       "source": [
         "#sorting the unique words according to their frequency in all the documents\r\n",
         "\r\n",
-        "freq, wrds = (list(i) for i in zip(*(sorted(zip(counts, words), reverse=True))))"
+        "freq, wrds = (list(i) for i in zip((sorted(zip(counts, words), reverse=True))))"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -734,7 +730,7 @@
         "n = 5001\r\n",
         "features = wrds[1000:n]"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,7 +744,7 @@
         "dictionary = {}\r\n",
         "doc_num = 1\r\n",
         "for doc_words in list_of_words:\r\n",
-        "    #print(doc_words)\r\n",
+        "    \r\n",
         "    np_doc_words = np.asarray(doc_words)\r\n",
         "    w, c = np.unique(np_doc_words, return_counts=True)\r\n",
         "    dictionary[doc_num] = {}\r\n",
@@ -756,7 +752,7 @@
         "        dictionary[doc_num][w[i]] = c[i]\r\n",
         "    doc_num = doc_num + 1"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -780,7 +776,7 @@
         "            row.append(0)\r\n",
         "    X_train.append(row)"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -794,7 +790,7 @@
         "X_train = np.asarray(X_train)\r\n",
         "Y_train = np.asarray(Y_train)"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -809,7 +805,7 @@
       "source": [
         "len(X_train)"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +833,7 @@
       "source": [
         "len(Y_train)"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -864,7 +860,7 @@
         "for document in do_test:\r\n",
         "        list_of_words_test.append(ps(document))"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -878,7 +874,7 @@
         "dictionary_test = {}\r\n",
         "doc_num = 1\r\n",
         "for doc_words in list_of_words_test:\r\n",
-        "    #print(doc_words)\r\n",
+        "    \r\n",
         "    np_doc_words = np.asarray(doc_words)\r\n",
         "    w, c = np.unique(np_doc_words, return_counts=True)\r\n",
         "    dictionary_test[doc_num] = {}\r\n",
@@ -886,7 +882,7 @@
         "        dictionary_test[doc_num][w[i]] = c[i]\r\n",
         "    doc_num = doc_num + 1"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +906,7 @@
         "            row.append(0)\r\n",
         "    X_test.append(row)"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -922,7 +918,7 @@
         "X_test = np.asarray(X_test)\r\n",
         "Y_test = np.asarray(Y_test)"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -937,7 +933,7 @@
       "source": [
         "len(X_test)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -965,7 +961,7 @@
       "source": [
         "len(Y_test)"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +993,7 @@
         "clf = MultinomialNB()\r\n",
         "clf.fit(X_train, Y_train)"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1017,7 @@
       "source": [
         "Y_predict = clf.predict(X_test)"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1037,7 +1033,7 @@
         "#accuracy for test data\r\n",
         "clf.score(X_test, Y_test)"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1067,7 +1063,7 @@
         "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\r\n",
         "print(classification_report(Y_test, Y_predict))"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1112,7 +1108,7 @@
       "source": [
         "Y_predict_tr = clf.predict(X_train)"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1129,7 +1125,7 @@
         "\r\n",
         "clf.score(X_train, Y_train)"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1154,7 @@
         "#printing report on training set\r\n",
         "print(classification_report(Y_train, Y_predict_tr))"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
