--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOz0epey9W55hs7IzsCyixo",
+      "authorship_tag": "ABX9TyOejaTlCrzTrRC2cCpNrqrq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -396,6 +396,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "0v6lGoAq6R4Y"
+      },
+      "source": [
+        "stopwords = ['a', 'about', 'above', 'after', 'again', 'against', 'all', 'am', 'an', 'and', 'any', 'are', \"aren't\", 'as', 'at',\r\n",
+        " 'be', 'because', 'been', 'before', 'being', 'below', 'between', 'both', 'but', 'by', \r\n",
+        " 'can', \"can't\", 'cannot', 'could', \"couldn't\", 'did', \"didn't\", 'do', 'does', \"doesn't\", 'doing', \"don't\", 'down', 'during',\r\n",
+        " 'each', 'few', 'for', 'from', 'further', \r\n",
+        " 'had', \"hadn't\", 'has', \"hasn't\", 'have', \"haven't\", 'having', 'he', \"he'd\", \"he'll\", \"he's\", 'her', 'here', \"here's\",\r\n",
+        " 'hers', 'herself', 'him', 'himself', 'his', 'how', \"how's\",\r\n",
+        " 'i', \"i'd\", \"i'll\", \"i'm\", \"i've\", 'if', 'in', 'into', 'is', \"isn't\", 'it', \"it's\", 'its', 'itself',\r\n",
+        " \"let's\", 'me', 'more', 'most', \"mustn't\", 'my', 'myself',\r\n",
+        " 'no', 'nor', 'not', 'of', 'off', 'on', 'once', 'only', 'or', 'other', 'ought', 'our', 'ours' 'ourselves', 'out', 'over', 'own',\r\n",
+        " 'same', \"shan't\", 'she', \"she'd\", \"she'll\", \"she's\", 'should', \"shouldn't\", 'so', 'some', 'such', \r\n",
+        " 'than', 'that',\"that's\", 'the', 'their', 'theirs', 'them', 'themselves', 'then', 'there', \"there's\", 'these', 'they', \"they'd\", \r\n",
+        " \"they'll\", \"they're\", \"they've\", 'this', 'those', 'through', 'to', 'too', 'under', 'until', 'up', 'very', \r\n",
+        " 'was', \"wasn't\", 'we', \"we'd\", \"we'll\", \"we're\", \"we've\", 'were', \"weren't\", 'what', \"what's\", 'when', \"when's\", 'where',\r\n",
+        " \"where's\", 'which', 'while', 'who', \"who's\", 'whom', 'why', \"why's\",'will', 'with', \"won't\", 'would', \"wouldn't\", \r\n",
+        " 'you', \"you'd\", \"you'll\", \"you're\", \"you've\", 'your', 'yours', 'yourself', 'yourselves', \r\n",
+        " 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine', 'ten', 'hundred', 'thousand', '1st', '2nd', '3rd',\r\n",
+        " '4th', '5th', '6th', '7th', '8th', '9th', '10th']"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5cBaW3e7AFsy"
       },
       "source": [
@@ -405,11 +432,13 @@
         "import os.path\r\n",
         "import glob\r\n",
         "import nltk\r\n",
+        "from nltk.stem.porter import PorterStemmer\r\n",
+        "ps = PorterStemmer()\r\n",
         "\r\n",
         "def cleanDoc(doc):\r\n",
         "    tokens = nltk.WordPunctTokenizer().tokenize(doc)\r\n",
         "    clean = [token.lower() for token in tokens if len(token) > 3 and token.isalpha()]\r\n",
-        "    \r\n",
+        "    #clean = [ps.stem(word) for word in clean if not word in stopwords]\r\n",
         "    return clean\r\n",
         "\r\n",
         "\r\n",
