--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOejaTlCrzTrRC2cCpNrqrq",
+      "authorship_tag": "ABX9TyN09Q+AGzcO0q0kwkmM6Smk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
         "outputId": "e16b11bc-0ac4-4cd8-b8cb-e76a3d2505e4"
       },
       "source": [
+        "#Mounting drive \r\n",
         "from google.colab import drive\r\n",
         "drive.mount('/content/drive')"
       ],
@@ -66,6 +67,7 @@
         "id": "WrTgmanbdXmU"
       },
       "source": [
+        "#After manually uploading zip file\r\n",
         "!unzip -u \"/content/20_newsgroups.zip\" -d \"/content/Internship/\""
       ],
       "execution_count": null,
@@ -417,7 +419,7 @@
         " 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine', 'ten', 'hundred', 'thousand', '1st', '2nd', '3rd',\r\n",
         " '4th', '5th', '6th', '7th', '8th', '9th', '10th']"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
