--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN09Q+AGzcO0q0kwkmM6Smk",
+      "authorship_tag": "ABX9TyPrKAbDCSFPQGvTon5DyWlJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1221,6 +1221,82 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WXfN6ggmhkLr"
+      },
+      "source": [
+        "#Building multiclass classification LSTM model\r\n",
+        "\r\n",
+        "from keras.layers import Dense, Embedding, LSTM, SpatialDropout1D\r\n",
+        "from keras.models import Sequential\r\n",
+        "from keras.callbacks import EarlyStopping"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dIDDoJUrjGU_"
+      },
+      "source": [
+        "n_most_common_words = 10000\r\n",
+        "epochs = 10\r\n",
+        "emb_dim = 128\r\n",
+        "batch_size = 256"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-1Bxk3rBk6-6"
+      },
+      "source": [
+        "#Fitting layers for LSTM \r\n",
+        "model = Sequential()\r\n",
+        "model.add(Embedding(n_most_common_words, emb_dim, input_length=X_train.shape[1]))\r\n",
+        "model.add(SpatialDropout1D(0.7))\r\n",
+        "model.add(LSTM(64, dropout=0.7, recurrent_dropout=0.7))\r\n",
+        "model.add(Dense(20, activation='softmax'))\r\n",
+        "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['acc'])\r\n",
+        "print(model.summary())\r\n",
+        "clsi = model.fit(X_train, Y_train, epochs=epochs, batch_size=batch_size, validation_split=0.2, callback=[EarlyStopping(monitor='val_loss', mode='auto')])\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gUYWHllwngPI"
+      },
+      "source": [
+        "#accuracy of the test set is calculated\r\n",
+        "accr_1 = model.evaluate(X_test, Y_test)\r\n",
+        "print('The accuracy of the test set is:')\r\n",
+        "print(accr_1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hHYYnkA5nzuW"
+      },
+      "source": [
+        "#accuracy of the train set is calculated\r\n",
+        "accr_2 = model.evaluate(X_train, Y_train)\r\n",
+        "print('The accuracy of the train set is:')\r\n",
+        "print(accr_2)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
