--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrKAbDCSFPQGvTon5DyWlJ",
+      "authorship_tag": "ABX9TyP7IqXgTujVYPdrvEWEU5ox",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -756,7 +756,7 @@
         "id": "3eVbLVh5tESc"
       },
       "source": [
-        "#deciding the no. of words to use as feature. took n = 1000 to 5000\r\n",
+        "#deciding the no. of words to use as features. took n = 1000 to 5000\r\n",
         "\r\n",
         "n = 5001\r\n",
         "features = wrds[1000:n]"
@@ -774,7 +774,7 @@
         "\r\n",
         "dictionary = {}\r\n",
         "doc_num = 1\r\n",
-        "for doc_words in list_of_words:\r\n",
+        "for doc_words in list_of_words:   \r\n",
         "    \r\n",
         "    np_doc_words = np.asarray(doc_words)\r\n",
         "    w, c = np.unique(np_doc_words, return_counts=True)\r\n",
@@ -1232,9 +1232,10 @@
         "\r\n",
         "from keras.layers import Dense, Embedding, LSTM, SpatialDropout1D\r\n",
         "from keras.models import Sequential\r\n",
-        "from keras.callbacks import EarlyStopping"
+        "from keras.callbacks import EarlyStopping\r\n",
+        "from keras.preprocessing.sequence import pad_sequences"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1243,10 +1244,14 @@
         "id": "dIDDoJUrjGU_"
       },
       "source": [
-        "n_most_common_words = 10000\r\n",
+        "n_most_common_words = 4000\r\n",
         "epochs = 10\r\n",
         "emb_dim = 128\r\n",
-        "batch_size = 256"
+        "batch_size = 500\r\n",
+        "max_len = 200\r\n",
+        "\r\n",
+        "X_train = pad_sequences(X_train, padding='post', maxlen=max_len)\r\n",
+        "X_test = pad_sequences(X_test, padding='post', maxlen=max_len)"
       ],
       "execution_count": 3,
       "outputs": []
@@ -1264,7 +1269,6 @@
         "model.add(LSTM(64, dropout=0.7, recurrent_dropout=0.7))\r\n",
         "model.add(Dense(20, activation='softmax'))\r\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['acc'])\r\n",
-        "print(model.summary())\r\n",
         "clsi = model.fit(X_train, Y_train, epochs=epochs, batch_size=batch_size, validation_split=0.2, callback=[EarlyStopping(monitor='val_loss', mode='auto')])\r\n"
       ],
       "execution_count": null,
@@ -1276,10 +1280,8 @@
         "id": "gUYWHllwngPI"
       },
       "source": [
-        "#accuracy of the test set is calculated\r\n",
-        "accr_1 = model.evaluate(X_test, Y_test)\r\n",
-        "print('The accuracy of the test set is:')\r\n",
-        "print(accr_1)"
+        "#metrics of the test set is calculated\r\n",
+        "accr_1 = model.evaluate(X_test, Y_test)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1290,10 +1292,8 @@
         "id": "hHYYnkA5nzuW"
       },
       "source": [
-        "#accuracy of the train set is calculated\r\n",
-        "accr_2 = model.evaluate(X_train, Y_train)\r\n",
-        "print('The accuracy of the train set is:')\r\n",
-        "print(accr_2)"
+        "#metrics of the train set is calculated\r\n",
+        "accr_2 = model.evaluate(X_train, Y_train)"
       ],
       "execution_count": null,
       "outputs": []
