--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -7,7 +7,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPoyr77HW2Qs/aq+vB7tpeq",
+      "authorship_tag": "ABX9TyNsPHnktZvUeCzhCW+wfGgt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1221,24 +1221,11 @@
         "id": "oiBkeH1tdd-u"
       },
       "source": [
-        "#Sorting\r\n",
+        "#Sorting and building vocabulary for data\r\n",
         "import operator\r\n",
         "\r\n",
-        "sorted_d = sorted(dictionary.items(), key=operator.itemgetter(1), reverse=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eh2eiDTtg4zf"
-      },
-      "source": [
-        "vocab_list = list(sorted_d)\r\n",
-        "\r\n",
-        "#selecting word with document frequency of top 500 to 1000\r\n",
-        "s_list = vocab_list[499:1000]"
+        "sorted_d = sorted(dictionary.items(), key=operator.itemgetter(1), reverse=True)\r\n",
+        "vocab_list = list(sorted_d)"
       ],
       "execution_count": null,
       "outputs": []
