--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -2,12 +2,11 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsPHnktZvUeCzhCW+wfGgt",
+      "authorship_tag": "ABX9TyOl9eqU2LQ+rQuZsJokKoRn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,12 +56,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zSj86iV2gaNR"
+        "id": "99P1_cuD5WKL"
       },
       "source": [
-        "# !unzip  \"/content/20_newsgroups.zip\""
+        "# Zip file link\r\n",
+        "# https://drive.google.com/file/d/1pMUlt9857YlZ1nJSXnWAFp_M5X93pC17/view?usp=sharing"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -76,29 +76,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JxyXtbbwi8fU",
-        "outputId": "0f437142-458f-4073-8b90-fa7e4137a844"
-      },
-      "source": [
-        "!ls"
-      ],
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "20_newsgroups.zip  Internship  sample_data\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -139,7 +116,7 @@
       "source": [
         "folders"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +314,7 @@
       "source": [
         "len(pathname_list)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +360,7 @@
       "source": [
         "len(Y)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +452,7 @@
         "\r\n",
         "print(X_data[0])"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +659,7 @@
         "df['Code'] = df.Labels.cat.codes\r\n",
         "df.head()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1017,7 +994,7 @@
         "from keras.preprocessing.sequence import pad_sequences\r\n",
         "from keras.utils.np_utils import to_categorical"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1040,7 +1017,7 @@
         "\r\n",
         "X = pad_sequences(sequences, maxlen=max_len)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,7 +1036,7 @@
       "source": [
         "Y = pd.get_dummies(df['Code']).values"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1070,7 +1047,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.25, random_state=123, shuffle=True)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1083,7 +1060,7 @@
         "emb_dim = 128\r\n",
         "batch_size = 500\r\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1104,7 +1081,7 @@
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['acc'])\r\n",
         "clsi = model.fit(X_train, y_train, epochs=epochs, batch_size=batch_size, validation_split=0.2, callbacks=[EarlyStopping(monitor=\"val_loss\", mode=\"auto\")])\r\n"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,7 +1129,7 @@
         "accr1 = model.evaluate(X_test, y_test)\r\n",
         "print('Test set\\n Loss: {:0.3f}\\n Accuracy: {:0.3f}'.format(accr1[0], accr1[1]))"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1156,7 @@
         "accr2 = model.evaluate(X_train, y_train)\r\n",
         "print('Train set\\n Loss: {:0.3f}\\n Accuracy: {:0.3f}'.format(accr2[0], accr2[1]))"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
