--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOl9eqU2LQ+rQuZsJokKoRn",
+      "authorship_tag": "ABX9TyNq48gy0jKtSGeYDTMnGKdl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "# Zip file link\r\n",
         "# https://drive.google.com/file/d/1pMUlt9857YlZ1nJSXnWAFp_M5X93pC17/view?usp=sharing"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,6 +797,8 @@
         "id": "Msw9FDHHiS3M"
       },
       "source": [
+        "#Train-Test split\r\n",
+        "\r\n",
         "from sklearn.model_selection import train_test_split\r\n",
         "\r\n",
         "X = df.Text\r\n",
@@ -827,7 +829,7 @@
         "id": "ftgc3ga73Ie_"
       },
       "source": [
-        "#defining accuracy function for evaluation of models\r\n",
+        "#To choose best hyperparameters, defining accuracy function for evaluation of models \r\n",
         "\r\n",
         "def accuracy_summary(pipeline, X_train, y_train, X_test, y_test):\r\n",
         "    get_fit = pipeline.fit(X_train, y_train)\r\n",
@@ -987,7 +989,7 @@
       "source": [
         "#Building multiclass classification LSTM model\r\n",
         "\r\n",
-        "from keras.layers import Dense, Embedding, LSTM, SpatialDropout1D\r\n",
+        "from keras.layers import Dense, Embedding, LSTM, SpatialDropout1D, Bidirectional\r\n",
         "from keras.models import Sequential\r\n",
         "from keras.preprocessing.text import Tokenizer\r\n",
         "from keras.callbacks import EarlyStopping\r\n",
@@ -1007,6 +1009,8 @@
         "outputId": "fc15ae03-6259-4a44-db65-2ecc01b85818"
       },
       "source": [
+        "#Tokenizing and padding \r\n",
+        "\r\n",
         "n_most_common_words = 25000\r\n",
         "max_len=500\r\n",
         "tokenizer = Tokenizer(num_words=n_most_common_words, filters='!\"#$%&()*+,-./:;<=>?@[\\\\]^_`{|}~\\t\\n', lower=True)\r\n",
@@ -1045,6 +1049,8 @@
         "id": "m_CvXNzoK2i4"
       },
       "source": [
+        "#Train-Test split\r\n",
+        "\r\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.25, random_state=123, shuffle=True)"
       ],
       "execution_count": null,
@@ -1073,9 +1079,12 @@
         "outputId": "189e3b62-c54e-4b6d-f0ff-e8b2efedd712"
       },
       "source": [
+        "#Building model \r\n",
+        "\r\n",
         "model = Sequential()\r\n",
         "model.add(Embedding(n_most_common_words, emb_dim, input_length=X.shape[1]))\r\n",
         "# model.add(SpatialDropout1D(0.4))\r\n",
+        "# model.add(Bidirectional(LSTM(128, dropout=0.4, recurrent_dropout=0.4)))\r\n",
         "model.add((LSTM(128, dropout=0.4, recurrent_dropout=0.4)))\r\n",
         "model.add(Dense(20, activation='softmax'))\r\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['acc'])\r\n",
@@ -1119,33 +1128,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uYo9ZG_IQaLh",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0a33d7dd-f6e1-43e5-98d8-b91743914277"
-      },
-      "source": [
-        "accr1 = model.evaluate(X_test, y_test)\r\n",
-        "print('Test set\\n Loss: {:0.3f}\\n Accuracy: {:0.3f}'.format(accr1[0], accr1[1]))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "156/156 [==============================] - 23s 145ms/step - loss: 0.9899 - acc: 0.6507\n",
-            "Test set\n",
-            " Loss: 0.990\n",
-            " Accuracy: 0.651\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "OPbp-wPcPAtx",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1165,6 +1147,33 @@
             "Train set\n",
             " Loss: 0.704\n",
             " Accuracy: 0.766\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uYo9ZG_IQaLh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a33d7dd-f6e1-43e5-98d8-b91743914277"
+      },
+      "source": [
+        "accr1 = model.evaluate(X_test, y_test)\r\n",
+        "print('Test set\\n Loss: {:0.3f}\\n Accuracy: {:0.3f}'.format(accr1[0], accr1[1]))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "156/156 [==============================] - 23s 145ms/step - loss: 0.9899 - acc: 0.6507\n",
+            "Test set\n",
+            " Loss: 0.990\n",
+            " Accuracy: 0.651\n"
           ],
           "name": "stdout"
         }
@@ -1213,16 +1222,16 @@
         "id": "NX0E5EKEhrWg"
       },
       "source": [
-        "#Probability P(word|class) function\r\n",
+        "#Probability P(word|class) function \r\n",
         "\r\n",
         "def prob(word):\r\n",
         "  for i in range(20):\r\n",
         "    for j in range(len(df['Text']):\r\n",
-        "      n = 0\r\n",
+        "      n = 1          #Smoothing\r\n",
         "      m = 0\r\n",
         "        if df['Code'][j] ==i:\r\n",
-        "          m += 1\r\n",
         "          for w in df['Text'][j]:\r\n",
+        "            m += 1\r\n",
         "            if word==w:\r\n",
         "            n += 1\r\n",
         "            continue       \r\n",
