--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNq48gy0jKtSGeYDTMnGKdl",
+      "authorship_tag": "ABX9TyNnsesjJehGw/xNOPH02xUH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "id": "99P1_cuD5WKL"
       },
       "source": [
-        "# Zip file link\r\n",
+        "# Zip file link to the data\r\n",
         "# https://drive.google.com/file/d/1pMUlt9857YlZ1nJSXnWAFp_M5X93pC17/view?usp=sharing"
       ],
       "execution_count": null,
@@ -269,7 +269,7 @@
         "outputId": "cd9e37d0-d928-4fd3-ea80-21e2eff10505"
       },
       "source": [
-        "#There is around 20000 files or data points to read from\r\n",
+        "#There are around 20000 files or data points to read from\r\n",
         "sum(len(files[i]) for i in range(20))"
       ],
       "execution_count": null,
@@ -852,7 +852,7 @@
         "id": "kxgFw-rq3P1o"
       },
       "source": [
-        "#Constructing a pipeline for model evaluation\r\n",
+        "#Constructing a pipeline for model evaluation with hyperparameters \r\n",
         "\r\n",
         "import numpy as np\r\n",
         "cv = CountVectorizer(max_df=0.5, min_df=100)\r\n",
