--- a/multiclass_20_ng.ipynb
+++ b/multiclass_20_ng.ipynb
@@ -6,7 +6,7 @@
       "name": "multiclass_20_ng.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNnsesjJehGw/xNOPH02xUH",
+      "authorship_tag": "ABX9TyP27CMqJnLOid+Um6TityBi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -987,6 +987,7 @@
         "id": "WXfN6ggmhkLr"
       },
       "source": [
+        "#Tried out LSTM on this classification \r\n",
         "#Building multiclass classification LSTM model\r\n",
         "\r\n",
         "from keras.layers import Dense, Embedding, LSTM, SpatialDropout1D, Bidirectional\r\n",
@@ -1079,7 +1080,7 @@
         "outputId": "189e3b62-c54e-4b6d-f0ff-e8b2efedd712"
       },
       "source": [
-        "#Building model \r\n",
+        "#Building model layers\r\n",
         "\r\n",
         "model = Sequential()\r\n",
         "model.add(Embedding(n_most_common_words, emb_dim, input_length=X.shape[1]))\r\n",
